# cvadventurer

./: .gitignore  LICENSE  README.md
custom object detection/face and mask detection/: README.md
custom_object_detection/concrete_cracks_detection/: README.md
custom_object_detection/concrete_cracks_detection/data/labels/: train.cache
custom_object_detection/concrete_cracks_detection/data/labels/test/: 13.txt
custom_object_detection/concrete_cracks_detection/data/labels/train/: 103.txt  111.txt  116.txt  22.txt  26.txt  31.txt  32.txt  35.txt  37.txt  39.txt  41.txt  43.txt  44.txt  48.txt  51.txt  (+24 more)
custom_object_detection/data/labels/test/: 11.txt  15.txt  16.txt  20.txt
custom_object_detection/data/labels/train/: 102.txt  104.txt  105.txt  112.txt  115.txt  117.txt  119.txt  23.txt  24.txt  27.txt  30.txt  36.txt  38.txt  40.txt  42.txt  45.txt  46.txt  49.txt  53.txt  59.txt  61.txt  69.txt  75.txt  76.txt  78.txt  80.txt  81.txt  87.txt  91.txt  93.txt  94.txt  97.txt  99.txt  i (3).txt
custom_object_detection/data/labels/val/: 1.txt  4.txt  6.txt  9.txt
custom_object_detection/face_mask_detection/: README.md
custom_object_detection/face_mask_detection/data/labels/: train.cache  val.cache
face detection/c++/: CMakeLists.txt
image processing/: CMakeLists.txt  README.md
image processing/src/: main.cpp
image_face_detection/include/: fdetector.hpp
image_face_detection/src/: fdetector.cpp  main.cpp
image_manipulations/: CMakeLists.txt
image_manipulations/src/: main.cpp
model training/concrete cracks detection/: README.md
model training/face and mask detection/: README.md  custom_config.yaml
model training/face detection/: README.md  custom_config.yaml
(+121 files in other folders)
